--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,580 @@
-.App {
-  text-align: center;
+/* Font link */
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@600&family=Work+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+
+ /* Desktop View */
+ * {
+    margin: 0;
+    padding: 0;
+    font-family: 'Work Sans', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root {
+    background-color: #f4f8fa;
+    height: 100vh;
+    width: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Navigation  */
+nav {
+    width: 100vw;
+    background-color: rgb(255 255 255);
+    height: 10vh;
+    display: flex;
+    align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#nav-logo {
+    height: 90%;
+    width: 10vw;
+    margin-left: 3vw;
+    object-fit: cover;
+}
+#logo {
+    height: 100%;
+    width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+/* Body */
+
+#small-heading {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 1.3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    width: 100vw;
+    color: #1b31a7;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#div-grid {
+    height: 75vh;
+    width: 100vw;
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+.card {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 45%;
+}
+
+#card1-prop {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+form {
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#inputs {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+label {
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 14px;
+}
+
+input {
+    height: 45px;
+    border: none;
+    font-family: 'IBM Plex Sans', sans-serif;
+    text-transform: capitalize;
+    font-size: 16px;
+    font-weight: 600;
+    outline: none;
+}
+
+.logo-for-inputs {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 250px;
+    background: #FFFFFF;
+    border: 1px solid #DCDDEC;
+    margin-top: 5px;
+    border-radius: 6px;
+}
+
+#input-logo-origin {
+    width: 10.35px;
+    height: 10.35px;
+    background-color: #32CD32;
+    border: 3px solid black;
+    border-radius: 50%;
+}
+
+#input-logo-stop {
+    width: 5px;
+    height: 5px;
+    background-color: #ffffff;
+    border: 6px solid black;
+    border-radius: 50%;
+    position: sticky;
+}
+
+#Waypoints-field {
+    width: 184px;
+}
+
+#add-another {
+    text-align: center;
+    font-size: 15px;
+    line-height: 18px;
+    font-family: 'Rubik', sans-serif;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+#destDiv {
+    margin-bottom: 20px;
+}
+
+.logo-for-inputs>i {
+    font-size: 20px;
+}
+
+#btn-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.modes-area {
+    font-size: 15px;
+}
+
+#btn {
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 62px;
+    font-size: 18px;
+    border-radius: 32px;
+    background-color: #1B31A8;
+    color: #ffffff;
+    font-family: 'IBM Plex Sans', sans-serif;
+}
+
+
+#btn:hover {
+    cursor: pointer;
+}
+
+#result-area {
+    width: 490px;
+    /* height: 200px; */
+    border-radius: 8px;
+    border: 1px solid #DCDDEC;
+    margin-bottom: 20px;
+}
+
+#result,
+#result2 {
+    background-color: #ffffff;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    width: 100%;
+}
+
+#result2 {
+    flex-direction: column;
+    text-align: center;
+    height: auto;
+    width: 100%;
+}
+
+.shape {
+    height: 75px;
+    border-radius: 8px;
+}
+
+#result>div,
+#result2>div {
+    width: 40%;
+    font-size: 20px;
+    line-height: 24px;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-weight: 700;
+}
+
+#result2>div {
+    font-size: 20px;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+
+#kms {
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-weight: 700;
+}
+
+#result-parameter {
+    text-align: right;
+    font-size: 30px !important;
+    color: #0079FF;
+    line-height: 120%;
+
+}
+
+#result-parameter2 {
+    text-align: right;
+    font-size: 30px;
+    color: #0079FF;
+    line-height: 120%;
+    width: 100%;
+}
+
+.specialCase {
+    font-size: 16px !important;
+}
+
+
+#Inside_auto_layout {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#Inside_auto_layout>div {
+    font-size: 12px;
+    line-height: 14.4px;
+    width: 426px;
+    height: 28px;
+    color: #1E2A32;
+    font-weight: 400;
+}
+
+
+/* bold property doesnt visible for your font style thats why i changed it into sans-serif */
+#Inside_auto_layout>div>span {
+    font-family: sans-serif;
+    font-size: 12px;
+    font-weight: 700 !important;
+    text-transform: capitalize;
+}
+
+/* Media Query part */
+
+@media only screen and (max-width: 768px) {
+
+    * {
+        margin: 0;
+        padding: 0;
+        font-family: 'Work Sans', sans-serif;
+        position: relative;
+    }
+
+    #root {
+        height: 1100px;
+        width: 100vw !important;
+        overflow: hidden;
+    }
+
+    /* Navigation  */
+    nav {
+        width: 100vw !important;
+        justify-content: center;
+        min-height: 5vh;
+        max-height: 7vh;
+    }
+
+    #nav-logo {
+        min-height: 70%;
+        width: 25vw;
+        margin-left: 0;
+        object-fit: cover;
+    }
+
+    #logo {
+        min-height: 100%;
+        width: 100%;
+    }
+
+    /* Body */
+
+    #small-heading {
+        font-family: 'Work Sans', sans-serif;
+        font-size: 0.7em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 5vh;
+        max-height: 5vh;
+        max-width: 100vw;
+        color: #1b31a7;
+    }
+
+    #div-grid {
+        width: 100vw;
+        height: 1300px;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-evenly;
+    }
+
+    .card {
+        height: auto;
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100vw;
+    }
+
+    #card1 {
+        min-height: auto !important;
+        /* position: absolute; */
+        /* top: 20%; */
+        left: 0%;
+        right: 0%;
+        bottom: 0;
+    }
+
+    #card1-prop {
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+    }
+
+    form {
+        width: 100vw;
+        min-height: 65%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        position: sticky !important;
+    }
+
+    #inputs {
+        width: 100%;
+        height: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    label {
+        display: none;
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-size: 14px;
+    }
+
+    input {
+        width: 280px;
+        height: 35px;
+        border: none;
+        font-family: 'IBM Plex Sans', sans-serif;
+        text-transform: capitalize;
+        font-size: 16px;
+        font-weight: 600;
+        outline: none;
+    }
+
+    .logo-for-inputs {
+        width: 350px;
+        height: 45px;
+
+    }
+
+    #anotherWaypoint{
+       height: auto !important;
+    }
+
+
+
+    #input-logo-origin {
+        width: 10.35px;
+        height: 10.35px;
+        background-color: #32CD32;
+        border: 3px solid black;
+        border-radius: 50%;
+    }
+
+    #input-logo-stop {
+        width: 5px;
+        height: 5px;
+        background-color: #ffffff;
+        border: 6px solid black;
+        border-radius: 50%;
+        position: sticky;
+    }
+
+    #add-another {
+        text-align: right;
+        font-size: 12px;
+        line-height: 18px;
+        font-family: 'Rubik', sans-serif;
+        margin-top: 10px;
+        cursor: pointer;
+    }
+
+    #Waypoints-field {
+       width: 280px;
+   }
+  
+
+    .logo-for-inputs>i {
+        font-size: 20px;
+    }
+
+    .modes-area {
+        font-size: 13px;
+    }
+
+
+    #btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 141px;
+        height: 40px;
+        font-size: 18px;
+        border-radius: 32px;
+        background-color: #1B31A8;
+        color: #ffffff;
+        font-family: 'IBM Plex Sans', sans-serif;
+    }
+
+
+    #btn:hover {
+        cursor: pointer;
+    }
+
+    #btn-div {
+        height: 30%;
+    }
+
+    #result-section {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        height: auto;
+        margin-top: 30px;
+
+    }
+
+    #result-area {
+        width: 351px;
+        height: 100%;
+        border-radius: 8px;
+        border: 1px solid #DCDDEC;
+
+    }
+
+    #result,
+    #result2 {
+        background-color: #ffffff;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height: 30%;
+    }
+
+    .shape {
+        height: 75px;
+        border-radius: 8px;
+    }
+
+    #est-time-txt {
+        font-size: 16px !important;
+    }
+
+    #result>div {
+        width: 40%;
+        font-size: 18px;
+        line-height: 24px;
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-weight: 700;
+    }
+
+    #kms {
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-weight: 700;
+    }
+
+    #result-parameter {
+        text-align: right;
+        font-size: 22px !important;
+        color: #0079FF;
+        line-height: 120%;
+    }
+
+    #result-parameter2 {
+        width: 90%;
+        text-align: right;
+        font-size: 18px;
+        color: #0079FF;
+        line-height: 120%;
+    }
+
+    .specialCase {
+        font-size: 12px !important;
+    }
+
+    #Inside_auto_layout {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #Inside_auto_layout>div {
+        font-size: 12px;
+        line-height: 14.4px;
+        width: 90%;
+        color: #1E2A32;
+        font-weight: 400;
+    }
+
+    /* bold property doesnt visible for your font style thats why i changed it into sans-serif */
+    #Inside_auto_layout>div>span {
+        font-family: sans-serif;
+        font-size: 12px;
+        font-weight: 700 !important;
+        text-transform: capitalize;
+    }
+
+
+
+    #map {
+        width: 100vw !important;
+        height: 357px !important;
+        position: absolute;
+        left: 0%;
+        right: 0%;
+        top: 0%;
+        bottom: 0%;
+    }
+
 }
