--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 
- /* Desktop View */
- * {
+/* Desktop View */
+* {
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
@@ -34,6 +34,7 @@ nav {
     margin-left: 3vw;
     object-fit: cover;
 }
+
 #logo {
     height: 100%;
     width: 100%;
@@ -407,8 +408,8 @@ input {
 
     }
 
-    #anotherWaypoint{
-       height: auto !important;
+    #anotherWaypoint {
+        height: auto !important;
     }
 
 
@@ -440,9 +441,9 @@ input {
     }
 
     #Waypoints-field {
-       width: 280px;
-   }
-  
+        width: 280px;
+    }
+
 
     .logo-for-inputs>i {
         font-size: 20px;
@@ -532,6 +533,7 @@ input {
     }
 
     #result-parameter2 {
+        display: block;
         width: 90%;
         text-align: right;
         font-size: 18px;
